--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -17,7 +17,7 @@
     <li id="li-RH">
         <a href="#">RH</a>
         <span>
-          <a href="#"></a>
+          <a href="{% url 'perfil:listar_funcionario' %}">Funcionário</a>
         </span>
     </li>
     {% else %}
