--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -14,6 +14,10 @@
     <script src="{% static 'assets\bootstrap\bootstrap.bundle.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
    
+    <script>
+      $('#admissao').mask("99/99/9999")
+      $('#demissao').mask("99/99/9999")
+    </script>
 
     <script>
       var message_ele = document.getElementById("message_container");
