--- a/perfil/templates/rh/listar_funcionario.html
+++ b/perfil/templates/rh/listar_funcionario.html
@@ -9,7 +9,7 @@
       <h3 class="">Listagem de Funcionários Novos</h3>
       <hr>
   
-  <div class="mt-4 mb-5 col-md-12">
+  <div class="mt-4 mb-5 col-md-5">
   <a href="{% url 'perfil:adicionar_funcionario' %}" class="btn btn-success float-right  w-100 mb-5">Adicionar novo Funcionário</a>
   </div>
 
@@ -18,9 +18,10 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col" style="width: 6%; text-align : center;">RE</th>
-      <th scope="col" style="width: 18%; text-align : center;">Nome</th>
-      <th scope="col" style="width: 8%; text-align : center;">Data de Admissao</th>
-      <th scope="col" style="width: 18%; text-align : center;">Centro de Custo</th>
+      <th scope="col" style="width: 20%; text-align : center;">Nome</th>
+      <th scope="col" style="width: 8%; text-align : center;">Data de Admissão</th>
+      <th scope="col" style="width: 8%; text-align : center;">Data de Demissão</th>
+      <th scope="col" style="width: 13%; text-align : center;">Centro de Custo</th>
       <th scope="col" style="width: 15%; text-align : center;">Telefone</th>
       <th scope="col" style="width: 2%; text-align : center;">Ramal</th>
       <th scope="col" style="width: 2%; text-align : center;">Opções</th>
@@ -32,7 +33,12 @@
       <td scope="row" style="text-align : center;">{{ funcionario.re_funcionario }}</td>
       <td scope="row" style="text-align : center;">{{ funcionario.nome }}</td>
       <td scope="row" style="text-align : center;">{{ funcionario.admissao }}</td>
-      <td scope="row" style="text-align : center;">{{ funcionario.centro_de_custo_link }}</td>
+      {% if funcionario.demissao %}
+      <td scope="row" style="text-align : center;">{{ funcionario.demissao }}</td>
+      {% else %}
+      <td scope="row" style="text-align : center;">Ativo</td>
+      {% endif %}
+      <td scope="row" style="text-align : center;">{{ funcionario.centro_de_custo_link.numero }}</td>
       <td scope="row" style="text-align : center;">{{ funcionario.telefone }}</td>
       <td scope="row" style="text-align : center;">{{ funcionario.ramal }}</td>
       <td scope="row" style="text-align : center;">
