--- a/perfil/templates/rh/adiciona_funcionario.html
+++ b/perfil/templates/rh/adiciona_funcionario.html
@@ -21,7 +21,7 @@
 
         <div class="form-group  col-md-3">
             <label><strong>Data de Admissão : </strong></label>
-            <input type="date" class="form-control" id="admissao" name="admissao" placeholder="Digite a data de admissao do Funcionário">
+            <input type="date" class="form-control" id="adicionar_admissao" name="admissao" placeholder="Digite a data de admissao do Funcionário">
         </div>
 
         <div class="form-group  col-md-6">
