--- a/perfil/templates/rh/listar_funcionario.html
+++ b/perfil/templates/rh/listar_funcionario.html
@@ -9,9 +9,22 @@
       <h3 class="">Listagem de Funcionários Novos</h3>
       <hr>
   
-  <div class="mt-4 mb-5 col-md-5">
-  <a href="{% url 'perfil:adicionar_funcionario' %}" class="btn btn-success float-right  w-100 mb-5">Adicionar novo Funcionário</a>
+  <div class="row">
+  <div class="mt-4 col-md-5">
+  <a href="{% url 'perfil:adicionar_funcionario' %}" class="btn btn-primary float-right  w-100">Adicionar novo Funcionário</a>
   </div>
+
+  <div class="mt-4 col-md-5">
+    <form method="GET" action="{% url 'perfil:filtrar_funcionario' %}">
+    <input type="text" name="term" id="query_date" value="{{ request.GET.term }}"
+    class="form-control" placeholder="Digite o nome do Funcionário ou o RE">
+  </div> <!-- ./col-md-5 -->
+  <div class="mt-4 col-md-2">
+    <button type="submit" class="btn btn-success pl-5 pr-5">Pesquisar</button>
+  </div>  
+  </form>
+  
+</div>
 
 <div class="row p-2">
 <table class="table table-striped table-responsive border rounded bg-light shadow">
