--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -12,7 +12,7 @@
     <script src="{% static 'assets\jquery\jquery-3.2.1.min.js' %}"></script>
     <script>window.jQuery || document.write('<script src="{% static "assets/jquery/jquery.slim.min.js" %}"><\/script>')</script>
     <script src="{% static 'assets\bootstrap\bootstrap.bundle.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+    <script src="{% static 'assets\jquery\jquery.mask.min.js' %}"></script>
    
     <script>
       $('#admissao').mask("99/99/9999")
